--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "jest-environment-jsdom-fourteen": "0.1.0",
     "jest-resolve": "24.8.0",
     "jest-watch-typeahead": "0.3.1",
-    "less": "^4.1.1",
+    "less": "4.1.1",
+    "less-loader": "7.3.0",
     "mini-css-extract-plugin": "0.5.0",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "pnp-webpack-plugin": "1.5.0",
@@ -133,8 +134,5 @@
     "presets": [
       "react-app"
     ]
-  },
-  "devDependencies": {
-    "less-loader": "7.3.0"
   }
 }
