feat: add eslint

--- a/package.json
+++ b/package.json
@@ -67,7 +67,8 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js"
+    "test": "node scripts/test.js",
+    "eslint": "./node_modules/.bin/eslint src"
   },
   "eslintConfig": {
     "extends": "react-app"
