--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,12 +11,14 @@ jobs:
         uses: actions/checkout@v2 # If you're using actions/checkout@v2 you must set persist-credentials to false in most cases for the deployment to work correctly.
         with:
           persist-credentials: false
+      - name: Install
+        run: |
+          npm install
       - name: Eslint
         run: |
           npm run eslint
-      - name: Install and Build
+      - name: Build
         run: |
-          npm install
           npm run-script build
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@releases/v3
