--- a/src/config.json
+++ b/src/config.json
@@ -1,33 +1,48 @@
 {
     "sideBarlist": [
-        {
-            "name": "在线开发",
-            "componentName": "CodeOnLine",
-            "children": [
-                {
-                    "componentName": "CodeOnLineComponents",
-                    "name": "组件开发"
-                },
-                {
-                    "componentName": "CodeOnLineEnv",
-                    "name": "环境变量"
-                },
-                {
-                    "componentName": "CodeOnLineData",
-                    "name": "数据绑定试图"
-                }
-            ]
-        },
-        {
-            "componentName": "ComponentsLibrary",
-            "name": "组件仓库",
-            "children": [
-                {
-                    "componentName": "ComponentsLibraryButton",
-                    "name": "开关组件",
-                    "tag": "component"
-                }
-            ]
-        }
-    ]
+			{
+					"name": "在线开发",
+					"componentName": "CodeOnLine",
+					"pageName": "CodeOnLinePage",
+					"children": [
+							{
+									"componentName": "CodeOnLineComponents",
+									"name": "组件开发"
+							},
+							{
+									"componentName": "CodeOnLineEnv",
+									"name": "环境变量"
+							},
+							{
+									"componentName": "CodeOnLineData",
+									"name": "数据绑定试图"
+							}
+					]
+			},
+			{
+					"componentName": "ComponentsLibrary",
+					"name": "组件仓库",
+					"children": [
+							{
+									"componentName": "ComponentsLibraryButton",
+									"name": "开关组件",
+									"tag": "component"
+							}
+					]
+			}
+	],
+	"pages": {
+		"HomePage": {
+			"tag": "page",
+			"pageName": "HomePage",
+			"active": true,
+			"name": "首页"
+		},
+		"CodeOnLinePage": {
+			"tag": "page",
+			"pageName": "CodeOnLinePage",
+			"active": false,
+			"name": "在线开发"
+		}
+	}
 }
